--- a/styles/style.css
+++ b/styles/style.css
@@ -97,13 +97,13 @@ body{
     width: 200px;
 }
 /* Seccion Experiencia */
-.experiencia{
+.reportes{
     display: flex;
     justify-content: center;
     align-content: center;
     flex-wrap: wrap;
 }
-.experiencia-titulo{
+.reportes-titulo{
     border: 1px solid;
     background-color: #333F43;
     margin-bottom: 20px;
@@ -113,11 +113,11 @@ body{
     width: 100%;
     font-size: 14px;
 }
-.experiencia-labores{
+.reporte-nuevo{
     display: contents;
     flex-wrap: wrap;
 }
-.experiencia-labor{
+.reporte-labor{
     margin: 10px 30px;
     flex-shrink: 0;
     background-color: #D5E9F3;
@@ -129,7 +129,7 @@ body{
     flex-wrap: wrap;
     padding: 20px;
 }
-.experiencia-labor p{
+.reporte-labor p{
     color: #9F3B3B;
     font-weight: 900;
 }
@@ -141,7 +141,7 @@ body{
     display: flex;
     flex-wrap: wrap;
 }
-.empresa-nombre{
+.reporte-nombre{
     background-color: #333F43;
     font-size: 14px;
     color: white;
@@ -150,7 +150,7 @@ body{
     flex-shrink: 0;
     padding-bottom: 10px;
 }
-.empresa-descripcion{
+.reporte-descripcion{
     height: 85%;
     width: 100%;
     background-color: white;
@@ -159,9 +159,11 @@ body{
     align-content: space-between;
     flex-wrap: wrap;
     flex-shrink: 0;
+    text-align: justify;
 }
-.empresa-descripcion p{
-    font-size: 16px;
+.reporte-descripcion p{
+    margin: 10px;
+    font-size: 12px;
     font-weight: 900;
     color: #333F43;
 }
@@ -169,8 +171,9 @@ body{
     display: flex;
     width: 300px;
     height: 50px;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
+    margin: 0;
 }
 .botton{
     width: 70px;
